<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_Events"
                android:checked="true"
                android:icon="@drawable/calendar"
                android:title="@string/Eventos" />

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/information"
                android:title="@string/info" />

            <!-- Sección de configuración -->
            <item
                android:id="@+id/configuration_section"
                android:title="@string/Config">
                <menu>
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/settings"
                        android:title="@string/configuracion" />
                    <item
                        android:id="@+id/nav_perfil"
                        android:icon="@drawable/perfil_details"
                        android:title="@string/perfil" />
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/power"
                        android:title="@string/logout" />

                </menu>
            </item>
        </group>
</menu>